docs/Grammar.txt
Statements <- Sep*, Statement, (Sep+, Statement)*, Sep*

Statement <- Conditional

Conditional <- LowBoolean, {("if" | "unless"), NewLine*, Statement}

LowBoolean <- LowBooleanFactor, (LowBooleanOp, NewLine*, LowBooleanFactor)*

LowBooleanOp <- "and"
	| "or"

LowBooleanUnary <- {"not"}, Expression

Expression <- TernaryIf

TernaryIf <- BooleanOr, {"?", NewLine*, TernaryIf, NewLine*, ":", NewLine*, TernaryIf}

BooleanOr <- BooleanAnd, ("||", NewLine*, BooleanAnd)*

BooleanAnd <- Equality, ("&&", NewLine*, Equality)*

Equality <- Shift, (EqualityOp, NewLine*, Shift)*

EqualityOp <- "=="
	| "==="
	| "!="

Shift <- Arithmetic, (ShiftOp, NewLine*, Arithmetic)*

ShiftOp <- "<<"
	| ">>"

Arithmetic <- Term, (TermOp, NewLine*, Term)*

TermOp <- "+"
	| "-"

Term <- Unary, (FactorOp, NewLine*, Unary)*

FactorOp <- "*"
	| "/"
	
Unary <- {("+" | "-" | "!"), NewLine*}, LookupChain

LookupChain <- Factor, Lookup(Call)*, {Lookup(Identifier), AssignTail}

Lookup(Type) <- "::", NewLine*, Type
	| ".", NewLine*, Type
	| "[", NewLine*, Expression, NewLine*, "]"

Factor <- Number
	| String
	| Array
	| InterpolatedString
	| Variable
	| Call
	| Assigment
	| If
	| Case
	| Unless
	| Class
	| Module
	| Method
	| Yield
	| Super
	| BeginBlock
	| "(", Statements, ")"

BeginBlock <- "begin", Statements, ExceptionHandlers, "end"

ExceptionHandlers <- ("rescue", Expression, {"=>", Identifier})*, {Else}, {"ensure", Statements}

Array <- "[", {Expression, (",", Expression)*}, "]"

Class <- "class", Identifier, Sep, Statements, "end"

Module <- "module", Identifier, Sep, Statements, "end"

Method <- "def", CallIdent, ({MethodParameters}, Sep | "(", MethodParameters, ")"), Statements, "end"

MethodParameters <- MethodParameter, (",", MethodParameter)*

MethodParameter <- {"&" | "*"}, Identifier

Case <- "case", (When+ {Else} | Else), "end"

When <- "when", Expression, ThenSep

If <- "if", Expression, ThenSep, Statements, {"elsif", Statements}*, {Else}, "end"

Else <- "else", Statements

Unless <- "unless", Expression, ThenSep, Statements, "end"

Assigment <- (Variable | InstanceVariable), AssignTail

AssignTail <- AssignOp, NewLine*, Expression

AssignOp <- "="
	| "+="
	| "-="
	| "*="
	| "/="
	| "<<="
	| ">>="

Call <- CallIdent, {Arguments | "(", Arguments, ")"}, {Block}

Yield  <- {Arguments | "(", Arguments, ")"}

Super <- {Arguments | "(", Arguments, ")"}

Block <- "{", NewLine*, {BlockParameters}, Statements, "}"
	| "do", NewLine*, {BlockParameters}, Statements, "end"

BlockParameters <- "|", MethodParameters, "|"

Arguments <- Expression, (",", Expression)*

Variable <- Identifier

ThenSep <- "then"
	| Sep
	| ":"

Sep <- NewLine+
	| ";"

InterpolatedString = StringStart, Statements, (StringContinue, Statements)* StringEnd

CallIdent <- Identifier
	| ExtendedIdentifier

# Tokens from lexer

InstanceVariable
ExtendedIdentifier
Identifier
Number
NewLine
String
StringStart
StringContinue
StringEnd
